# Antidote3

./: CHANGELOG.txt
antidote-2.1.0/src/communication/agent/: Makefile  Makefile.am  Makefile.in  agent_association.c  agent_association.gcno  agent_association.h  agent_association.lo  agent_configuring.c  agent_configuring.gcno  agent_configuring.h  agent_disassociating.c  agent_disassociating.gcno  agent_disassociating.h  agent_disassociating.lo  agent_fsm.c  agent_fsm.gcno  agent_fsm.h  agent_operating.c  agent_operating.gcno  agent_operating.h  agent_operating.lo  agent_ops.c  agent_ops.gcno  agent_ops.h
antidote-2.1.0/src/communication/agent/.deps/: agent_association.Plo  agent_configuring.Plo  agent_disassociating.Plo  (+4 more)
antidote-2.1.0/src/communication/common/: Makefile  Makefile.am  Makefile.in  communication.gcno  communication.lo  context_manager.c  context_manager.gcno  context_manager.h  disassociating.c  disassociating.gcno  disassociating.h  extconfigurations.gcno  fsm.c  fsm.gcno  fsm.lo  service.c  service.gcno  service.h  service.lo  stdconfigurations.gcno
antidote-2.1.0/src/communication/manager/: Makefile  Makefile.am  Makefile.in  libmanager.la  manager_association.c  manager_association.gcno  manager_association.h  manager_association.lo  manager_configuring.c  manager_configuring.gcno  manager_configuring.h  manager_disassociating.c  manager_disassociating.gcno  manager_disassociating.h  manager_fsm.c  manager_fsm.gcno  manager_fsm.lo  manager_operating.c  manager_operating.gcno  manager_operating.h  manager_operating.lo  stdconfigurations.gcno
(+633 files in other folders)
