noinst_LTLIBRARIES = libcommon.la

INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

libcommon_la_SOURCES = stdconfigurations.c \
			context_manager.c \
			extconfigurations.c \
			service.c

noinst_HEADERS = stdconfigurations.h \
			context_manager.h \
			extconfigurations.h \
			service.h