noinst_LTLIBRARIES = libmanager.la

INCLUDES =  -I$(top_builddir) -I$(top_srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src

libmanager_la_SOURCES = manager_association.c \
			manager_operating.c \
			manager_disassociating.c \
			manager_configuring.c

noinst_HEADERS = manager_association.h \
			manager_operating.h \
			manager_disassociating.h \
			manager_configuring.h